fixed bug which added white space on the right in some cases (caused by dropdowns), some more minor bug fixing

--- a/app/assets/styles/footer.scss
+++ b/app/assets/styles/footer.scss
@@ -88,7 +88,7 @@
   position: relative;
   top: -40px;
   width: 80px;
-  z-index: 99; }
+  z-index: 29; }
 
 
 .top-link a:hover{
